# c2c-hackathon2025-1

./: README.md  check_leds.py  game.py  matrix_button_led_controller.py  open_docs.py  pyproject.toml
__tests__/: _utils.py  conftest.py  test_01_beginning_and_ending_sound.py  test_02_buttons_play_sound_and_show_color.py  test_03_sound_cue_on_match_or_not.py  test_04_buttons_lights_update_after_match_or_not.py  test_07_button_mapping_is_random_each_game.py  test_09_button_does_not_match_itself.py  test_10_already_matched_buttons_do_not_count_again.py  test_import.py  test_seed_works_correctly.py
